kube/overlays/production/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: app-ingress
  spec:
    ingressClassName: nginx
    rules:
      - host: client.quantumwerke.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service: 
                  name: client
                  port: 
                    number: 80
              path: /
      - host: server.quantumwerke.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service: 
                  name: server
                  port: 
                    number: 3030
              path: /
    # # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #   - hosts:
    #     - www.example.com
    #     secretName: example-tls
